Specify typescript as a dev dependency.

--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prepublish": "tsc"
+  },
+  "devDependencies": {
+    "typescript": "^2.7.2"
   },
   "repository": {
     "type": "git",
