--- a/tsconfig.json
+++ b/tsconfig.json
@@ -68,5 +68,5 @@
     /* Advanced Options */
     "forceConsistentCasingInFileNames": true /* Disallow inconsistently-cased references to the same file. */
   },
-  "exclude": ["node_modules", "dist"]
+  "exclude": ["./node_modules", "./dist", "./test"]
 }
