--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "parse-money",
-  "version": "1.0.10",
+  "version": "1.0.11",
   "description": "Extract money from text (number and currency detection)",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -10,6 +10,7 @@
   },
   "devDependencies": {
     "@types/tap": "^14.10.0",
+    "codecov": "^3.7.0",
     "tap": "^14.10.7",
     "typescript": "^3.9.5"
   },
