--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "test": "tap",
+    "test": "tap && codecov",
     "prepare": "tsc"
   },
   "devDependencies": {
