--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "posttest": "npm run coverage",
     "prepare": "npm run compile",
     "coverage": "tap --coverage-report=lcov && codecov",
+    "build": "npm run compile",
     "compile": "tsc"
   },
   "devDependencies": {
